# Frog

./: .gitignore  README.md  pyproject.toml
Frog/: __main__.py  check.py  class_DiagramParameter.py  class_Diagrams.py  class_GP.py  class_Molecule.py  class_OpticalParameter.py  class_modules.py  dalton_manager_module.py  electric_field_module.py  error_messages.py  first_part.py  frog_class.py  frog_data_analysis.py  geometry_manager.py  main.py  messages.py  second_part.py  third_part.py  toolbox.py  universe_manager.py
Frog/Molecules/: Chlore.py  Ethanol_OPLSAA.py  Methanol_OPLSAA.py  SPCE.py  Sodium.py  Water_Osted2006_ESdescription.py  Water_PSPC.py  Water_RESD_Beerepoot2016.py  Water_TIP4P2005.py  Water_TIP4P2005_O.py  __init__.py
Regtest/: RUN_REGTESTS.sh  fake_qm_quadrupole_results.sh  fake_qm_results.sh  to_clean_directory_frog.sh
Regtest/Data/: dalton_results_alpha_beta_dipole_0_800nm.out  dalton_results_beta_quadrupole_0_800nm.out
Regtest/Diagrams/: RUN_TEST.sh  TESTS_MEANING  fake_qm_results.sh  test1.py  test2.py  test3a.py  test3b.py  test3c.py  test3d.py  test3e.py  test3f.py  test_electric_field_a.py  test_electric_field_b.py  test_hbonds.py  test_molecular_orientation.py  test_rdf.py
Regtest/General/: RUN_TEST.sh  TESTS_MEANING  test1.py  test2.py  test3.py  test4.py  test4_next.py  test5.py
Regtest/Optical/: RUN_TEST.sh  TESTS_MEANING  test_qm.py  test_qm_do_not_redo_qm.py  test_qm_redo_qm.py  (+12 more)
docs/: Frog.Molecules.html  Frog.html  genindex.html  index.html  note_for_sphnix.html  objects.inv  py-modindex.html  search.html  searchindex.js
(+281 files in other folders)
